--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
         "build": "vite build",
         "dev": "vite"
     },
+    "dependencies": {
+        "@alpinejs/persist": "^3.12.0",
+        "apexcharts": "^3.36.3"
+    },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
         "alpinejs": "^3.4.2",
